log
Fri 10 May 2024 02:59:26 AM UTC: 
 tests:  1|8
total_score: 0/70
47afd25
Fri 10 May 2024 03:10:20 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
f5ad1f5
Fri 10 May 2024 03:11:36 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
76478c3
Fri 10 May 2024 03:25:01 AM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:64: error: expected ‘)’ before ‘{’ token
   86 |         if (is_equal(tree, key, tree -> current -> pair -> key)
      |            ~                                                   ^
      |                                                                )
   87 |         {
      |         ~                                                       
treemap.c:90:5: error: expected expression before ‘}’ token
   90 |     }
      |     ^
Compilation failed
c10ccd6
Fri 10 May 2024 03:29:53 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
c5d8d2a
Fri 10 May 2024 03:44:27 AM UTC: 
 treemap.c | 36 +++++++++++++++++++++++++++++++++++-
 1 file changed, 35 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
2157251
